@@ -1,0 +1,4 @@
+.LP
+As a reminder to the reader, some shells will interpret brackets ([
+and ]) for pattern matching.  Depending on your shell, it may be
+necessary to enclose ranged lists within quotes.
