@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmidetect.8.pre.in,v 1.9 2008-05-06 21:46:34 chu11 Exp $
+.\"$Id: ipmidetect.8.pre.in,v 1.10 2008-05-06 23:43:54 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2007 The Regents of the University of California.
@@ -46,8 +46,8 @@ will output the status of each IPMI node configured with
 unless they are specified on the command line.  If the first node
 listed is "-", nodes will be read in from standard input.  The nodes
 can be listed in hostrange format, comma separated lists, or space
-separated lists.  See the section below on HOST RANGES for
-instructions on how to list hosts in hostrange format.  The hostnames
+separated lists.  See the section below on HOSTRANGED SUPPORT for
+instructions on how to list hosts in range format.  The hostnames
 listed must be the shortened names of hostnames.
 
 .SH "OPTIONS"
@@ -82,36 +82,8 @@ List nodes in newline separated list
 .B \-s, \-\-space
 List nodes in space separated list
 .LP
-.SH "HOST RANGES"
-As noted in sections above,
-.B ipmidetect
-accepts ranges of hostnames in the general form: prefix[n-m,l-k,...],
-where n < m and l < k, etc., as an alternative to explicit lists of
-hosts.  This form should not be confused with regular expression
-character classes (also denoted by ``[]''). For example, foo[19] does
-not represent foo1 or foo9, but rather represents a degenerate range:
-foo19.
-.LP
-This range syntax is meant only as a convenience on clusters with a
-prefixNN naming convention and specification of ranges should not be
-considered necessary -- the list foo1,foo9 could be specified as such,
-or by the range foo[1,9].
-.LP
-Some examples of range usage follow:
-.LP
-List all nodes among foo01,foo02,...,foo05 that are detected/undetected 
-    ipmidetect foo[01-05]
-.LP
-List all nodes among foo7,foo9,foo10 that are detected/undetected
-    ipmidetect foo[7,9-10]
-.LP
-As a reminder to the reader, some shells will interpret brackets ('['
-and ']') for pattern matching.  Depending on your shell, it may be
-necessary to enclose ranged lists within quotes.  For example, in
-tcsh, the above two examples should be executed as:
-.nf
-    ipmidetect "foo[01-05]"
-    ipmidetect "foo[7,9-10]"
+#include <@top_srcdir@/common/doc/manpage-common-hostranged-text-main.man>
+#include <@top_srcdir@/common/doc/manpage-common-hostranged-text-shell.man>
 #include <@top_srcdir@/common/doc/manpage-common-reporting-bugs.man>
 .SH COPYRIGHT
 Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
