@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmidetectd.conf.5.pre.in,v 1.8 2008-05-06 21:46:35 chu11 Exp $
+.\"$Id: ipmidetectd.conf.5.pre.in,v 1.9 2008-05-06 23:43:54 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2007 The Regents of the University of California.
@@ -55,10 +55,10 @@ for requests off of.  Default is 9225.
 .TP 
 .I host string
 Specify a host or IP address the ipmidetectd daemon whould send IPMI
-pings to.  Can be specified as many times as necessary.  Can except hostranges
-as input.  See 
+pings to.  Can be specified as many times as necessary.  Can accept host ranges
+as input.  See HOSTRANGED SUPPORT
 .B ipmidetect(8)
-for information on hostranges.
+for information on ranged formats.
 .SH "FILES"
 @IPMIDETECTD_CONFIG_FILE_DEFAULT@
 #include <@top_srcdir@/common/doc/manpage-common-reporting-bugs.man>
